--- a/practice_assignment_1.html
+++ b/practice_assignment_1.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-  <title>Practice Assignment 1</title>
+  <title>cj</title>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" ></script>
   <script type="text/javascript" src="http://d3js.org/d3.v3.js"></script>
   <style>
@@ -22,7 +22,7 @@
      }
      .bar {
        z-index: 1000;
-      }
+     }
   </style>
   
   <script type="text/javascript">
@@ -53,7 +53,7 @@
 		   var yAxis = d3.svg.axis()
 		                 .scale(y)
 		                 .orient('left')
-		                 .ticks(1)
+		                 //.ticks(10)
 		                 .tickSize(0)
 		                 .tickPadding(8);
 		
@@ -85,7 +85,7 @@
 		      .append('rect')
 		      .attr('class', 'bar')
 		      .attr('x', 0)
-		      .attr('y', function(d,i){return -1 + margin.top + y.rangeBand() * i - margin.top;})
+		      .attr('y', function(d,i){return -1 + margin.top + y.rangeBand() * i - 40;})
 		      .attr('height', y.rangeBand())
 		      .attr('width', function(d) { return x(d.Quantity) })
 		      .style("fill", function(d, i) { return colorScale(i); });
